--- a/I'm just a memer/Info.plist
+++ b/I'm just a memer/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This application uses the camera permission to save the generated meme to Photos.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>This application uses the camera permission to save the generated meme to Photos.</string>
 </dict>
